[gd_scene load_steps=9 format=2]

[ext_resource path="res://Match 3 Assets/blue_panel.png" type="Texture" id=1]
[ext_resource path="res://flag.png" type="Texture" id=2]
[ext_resource path="res://Win.gd" type="Script" id=3]
[ext_resource path="res://forward.png" type="Texture" id=4]
[ext_resource path="res://Match 3 Assets/home.png" type="Texture" id=5]
[ext_resource path="res://Match 3 Assets/Fonts/Kenney Future Narrow.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://mrtfont.tres" type="DynamicFont" id=7]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 6 )

[node name="Win" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="PauseBox" type="TextureRect" parent="."]
visible = false
margin_left = 176.0
margin_top = 200.0
margin_right = 432.0
margin_bottom = 520.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseIcon" type="Sprite" parent="PauseBox"]
position = Vector2( 128, 40 )
scale = Vector2( 0.89, 0.93 )
texture = ExtResource( 2 )

[node name="HomeButton" type="TextureButton" parent="PauseBox"]
margin_left = 168.0
margin_top = 224.0
margin_right = 218.0
margin_bottom = 274.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="TextureButton" parent="PauseBox"]
margin_left = 40.0
margin_top = 224.0
margin_right = 90.0
margin_bottom = 274.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shiftEnd" type="Label" parent="PauseBox"]
margin_left = 48.0
margin_top = 56.0
margin_right = 209.0
margin_bottom = 91.0
custom_fonts/font = ExtResource( 7 )
text = "Shift end"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shiftEnd2" type="Label" parent="PauseBox"]
margin_left = 24.0
margin_top = 96.0
margin_right = 250.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 1 )
text = "Customers served
today: 12 "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shiftEnd3" type="Label" parent="PauseBox"]
margin_left = 24.0
margin_top = 152.0
margin_right = 250.0
margin_bottom = 176.0
custom_fonts/font = SubResource( 1 )
text = "Cost of mistakes: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shiftEnd4" type="Label" parent="PauseBox"]
margin_left = 24.0
margin_top = 184.0
margin_right = 250.0
margin_bottom = 229.0
custom_fonts/font = SubResource( 1 )
text = "Take home pay:
5000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseTween" type="Tween" parent="."]
[connection signal="pressed" from="PauseBox/HomeButton" to="." method="_on_HomeButton_pressed"]
[connection signal="pressed" from="PauseBox/NextButton" to="." method="_on_NextButton_pressed"]
